# dish-tapper-software

./: README.md  pyproject.toml
dish_tapper_software/: app.py  channel_form.py  channel_form.ui  config.py  main_window.ui  make_ui_files  pulse_utils.py  ui_channel_form.py  ui_main_window.py
images/ico/: create_ico
pyinstaller/: create_app  create_app.cmd  run_app.py
