[tool.poetry]
name = "dish-tapper-software"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13" 
numpy = "^1.26.4"
scipy = "^1.12.0"
sounddevice = "^0.4.6"
matplotlib = "^3.8.3"
pyside6 = "^6.6.3"

[tool.poetry.scripts]
dish-tapper = "dish_tapper_software.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
